--- a/index.html
+++ b/index.html
@@ -4,191 +4,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        function toggleMenu() {
+            var menu = document.querySelector('.navigation ul');
+            menu.classList.toggle('show');
+        }
+    </script>
 </head>
 
-<body>.
-    <!-- <div class="parent-container"> -->
-        <div class="navigation">
-            <div class="logo">XYZ</div>
-            <ul>
-                <li class="active"> <a class="active" href="#">Home</a>
-                    <div class="menu">
-                        <ul>
-                            <li class="menu1">menu1
-                                <div class="sub-menu1">
-                                    <ul>
-                                        <li>sub-menu1.1</li>
-                                        <li>sub-menu1.2</li>
-                                        <li>sub-menu1.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu2">menu2
-                                <div class="sub-menu2">
-                                    <ul>
-                                        <li>sub-menu2.1</li>
-                                        <li>sub-menu2.2</li>
-                                        <li>sub-menu2.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu3">menu3
-                                <div class="sub-menu3">
-                                    <ul>
-                                        <li>sub-menu3.1</li>
-                                        <li>sub-menu3.2</li>
-                                        <li>sub-menu3.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">About</a>
-                    <div class="menu">
-                        <ul>
-                            <li class="menu1">menu1
-                                <div class="sub-menu1">
-                                    <ul>
-                                        <li>sub-menu1.1</li>
-                                        <li>sub-menu1.2</li>
-                                        <li>sub-menu1.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu2">menu2
-                                <div class="sub-menu2">
-                                    <ul>
-                                        <li>sub-menu2.1</li>
-                                        <li>sub-menu2.2</li>
-                                        <li>sub-menu2.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu3">menu3
-                                <div class="sub-menu3">
-                                    <ul>
-                                        <li>sub-menu3.1</li>
-                                        <li>sub-menu3.2</li>
-                                        <li>sub-menu3.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">Service</a>
-                    <div class="menu">
-                        <ul>
-                            <li class="menu1">menu1
-                                <div class="sub-menu1">
-                                    <ul>
-                                        <li>sub-menu1.1</li>
-                                        <li>sub-menu1.2</li>
-                                        <li>sub-menu1.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu2">menu2
-                                <div class="sub-menu2">
-                                    <ul>
-                                        <li>sub-menu2.1</li>
-                                        <li>sub-menu2.2</li>
-                                        <li>sub-menu2.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu3">menu3
-                                <div class="sub-menu3">
-                                    <ul>
-                                        <li>sub-menu3.1</li>
-                                        <li>sub-menu3.2</li>
-                                        <li>sub-menu3.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">Contact</a>
-                    <div class="menu">
-                        <ul>
-                            <li class="menu1">menu1
-                                <div class="sub-menu1">
-                                    <ul>
-                                        <li>sub-menu1.1</li>
-                                        <li>sub-menu1.2</li>
-                                        <li>sub-menu1.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu2">menu2
-                                <div class="sub-menu2">
-                                    <ul>
-                                        <li>sub-menu2.1</li>
-                                        <li>sub-menu2.2</li>
-                                        <li>sub-menu2.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu3">menu3
-                                <div class="sub-menu3">
-                                    <ul>
-                                        <li>sub-menu3.1</li>
-                                        <li>sub-menu3.2</li>
-                                        <li>sub-menu3.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li><a href="#">Team</a>
-                    <div class="menu">
-                        <ul>
-                            <li class="menu1">menu1
-                                <div class="sub-menu1">
-                                    <ul>
-                                        <li>sub-menu1.1</li>
-                                        <li>sub-menu1.2</li>
-                                        <li>sub-menu1.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu2">menu2
-                                <div class="sub-menu2">
-                                    <ul>
-                                        <li>sub-menu2.1</li>
-                                        <li>sub-menu2.2</li>
-                                        <li>sub-menu2.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="menu3">menu3
-                                <div class="sub-menu3">
-                                    <ul>
-                                        <li>sub-menu3.1</li>
-                                        <li>sub-menu3.2</li>
-                                        <li>sub-menu3.3</li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
+<body>
+    <div class="navigation">
+<div class="menu-icon" onclick="toggleMenu()">☰</div>
 
-        <!-- <main></main>
+        <div class="logo">XYZ</div>
+        <ul>
+            <li class="active"> <a class="active" href="#">Home</a>
+                <div class="menu">
+                    <ul>
+                        <li class="menu1">menu1
+                            <div class="sub-menu1">
+                                <ul>
+                                    <li>sub-menu1.1</li>
+                                    <li>sub-menu1.2</li>
+                                    <li>sub-menu1.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu2">menu2
+                            <div class="sub-menu2">
+                                <ul>
+                                    <li>sub-menu2.1</li>
+                                    <li>sub-menu2.2</li>
+                                    <li>sub-menu2.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu3">menu3
+                            <div class="sub-menu3">
+                                <ul>
+                                    <li>sub-menu3.1</li>
+                                    <li>sub-menu3.2</li>
+                                    <li>sub-menu3.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">About</a>
+                <div class="menu">
+                    <ul>
+                        <li class="menu1">menu1
+                            <div class="sub-menu1">
+                                <ul>
+                                    <li>sub-menu1.1</li>
+                                    <li>sub-menu1.2</li>
+                                    <li>sub-menu1.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu2">menu2
+                            <div class="sub-menu2">
+                                <ul>
+                                    <li>sub-menu2.1</li>
+                                    <li>sub-menu2.2</li>
+                                    <li>sub-menu2.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu3">menu3
+                            <div class="sub-menu3">
+                                <ul>
+                                    <li>sub-menu3.1</li>
+                                    <li>sub-menu3.2</li>
+                                    <li>sub-menu3.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Service</a>
+                <div class="menu">
+                    <ul>
+                        <li class="menu1">menu1
+                            <div class="sub-menu1">
+                                <ul>
+                                    <li>sub-menu1.1</li>
+                                    <li>sub-menu1.2</li>
+                                    <li>sub-menu1.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu2">menu2
+                            <div class="sub-menu2">
+                                <ul>
+                                    <li>sub-menu2.1</li>
+                                    <li>sub-menu2.2</li>
+                                    <li>sub-menu2.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu3">menu3
+                            <div class="sub-menu3">
+                                <ul>
+                                    <li>sub-menu3.1</li>
+                                    <li>sub-menu3.2</li>
+                                    <li>sub-menu3.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Contact</a>
+                <div class="menu">
+                    <ul>
+                        <li class="menu1">menu1
+                            <div class="sub-menu1">
+                                <ul>
+                                    <li>sub-menu1.1</li>
+                                    <li>sub-menu1.2</li>
+                                    <li>sub-menu1.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu2">menu2
+                            <div class="sub-menu2">
+                                <ul>
+                                    <li>sub-menu2.1</li>
+                                    <li>sub-menu2.2</li>
+                                    <li>sub-menu2.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu3">menu3
+                            <div class="sub-menu3">
+                                <ul>
+                                    <li>sub-menu3.1</li>
+                                    <li>sub-menu3.2</li>
+                                    <li>sub-menu3.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Team</a>
+                <div class="menu">
+                    <ul>
+                        <li class="menu1">menu1
+                            <div class="sub-menu1">
+                                <ul>
+                                    <li>sub-menu1.1</li>
+                                    <li>sub-menu1.2</li>
+                                    <li>sub-menu1.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu2">menu2
+                            <div class="sub-menu2">
+                                <ul>
+                                    <li>sub-menu2.1</li>
+                                    <li>sub-menu2.2</li>
+                                    <li>sub-menu2.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="menu3">menu3
+                            <div class="sub-menu3">
+                                <ul>
+                                    <li>sub-menu3.1</li>
+                                    <li>sub-menu3.2</li>
+                                    <li>sub-menu3.3</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
 
-        <footer>
-            
-            <p>&copy; 2023 Your Company Name. All rights reserved.</p>
-        </footer> -->
-    <!-- </div> -->
-    
+    <main>
+        jhbk
+    </main>
+
+    <footer>
+
+        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+    </footer>
+
+
 </body>
 
 </html>
